# trajectory_control

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controller_params.yaml
include/trajectory_control/: ppt_controller.hpp  spline.hpp  trajectory.hpp
launch/: trajectory.launch.py
rviz/: traj_config.rviz
src/: controller.cpp  controller_node.cpp  spline.cpp  trajectory.cpp
