cmake_minimum_required(VERSION 3.8)
project(trajectory_control)


if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

add_library(path_tracking_lib
    src/spline.cpp
    src/trajectory.cpp
    src/controller.cpp
)

target_include_directories(path_tracking_lib PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)


add_executable(controller_node
    src/controller_node.cpp
)


target_link_libraries(controller_node
    path_tracking_lib
)
ament_target_dependencies(path_tracking_lib
    rclcpp
    geometry_msgs
    nav_msgs
    tf2
    tf2_ros
    tf2_geometry_msgs
)

ament_target_dependencies(controller_node
    rclcpp
    geometry_msgs
    nav_msgs
    tf2
    tf2_ros
    tf2_geometry_msgs
)


install(
  DIRECTORY include/ 
  DESTINATION include
)

install(
  DIRECTORY launch config rviz
  DESTINATION share/${PROJECT_NAME}
)


install(
  TARGETS path_tracking_lib controller_node
  DESTINATION lib/${PROJECT_NAME}
)



if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
